--- a/prototype/Project.toml
+++ b/prototype/Project.toml
@@ -1,11 +1,7 @@
-name = "BAC"
-uuid = "e5bcb881-1a23-4832-befa-34c64c895223"
-authors = ["hellmann <hellmann@pik-potsdam.de>"]
-version = "0.1.0"
-
 [deps]
 DiffEqFlux = "aae7a2af-3d4f-5e19-a356-7da93b79d9d0"
 LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
