--- a/prototype/Project.toml
+++ b/prototype/Project.toml
@@ -1,4 +1,5 @@
 [deps]
+BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 DiffEqDevTools = "f3b72e0c-5b89-59e1-b016-84e28bfd966d"
 DiffEqFlux = "aae7a2af-3d4f-5e19-a356-7da93b79d9d0"
 LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
