--- a/prototype/Project.toml
+++ b/prototype/Project.toml
@@ -11,5 +11,6 @@ Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 Sundials = "c3572dad-4567-51f8-b174-8c6c989267f4"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
